src/layout/components/header/style.scss
.ant-layout-header {
  background-color: #fff;
  box-shadow: 0px 4px 12px rgba(0,0,0,0.04);
  line-height: normal;
  padding: 10px 0;
  height: 80px;
  display: flex;
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 999;

  @media (max-width: 991px) {
    height: 70px;
  }
  @media (max-width: 575px) {
    height: 60px;
  }

  .ikd-logo {
    width: 250px;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    padding: 0 15px;
    @media (max-width: 767px) {
      max-width: 120px;
      min-width: 120px;
      width: 100%;
    }
  }

  .ikd-header-content {
    flex: 1;
    display: flex;

    .ikd-header-left {
      display: flex;
      height: 100%;
      padding-right: 20px;
      @media (max-width: 767px) {
        padding-right: 0;
      }

      .ikd-header-collapsebale {
        border-left: 1px solid #D9DBE9;
        padding: 0 30px;
        display: flex;
        align-items: center;
        justify-content: center;
        @media (max-width: 767px) {
          padding: 0 15px;
        }
      
        .ikd-collapseable-button {
          height: 24px;
          width: 24px;
          overflow: hidden;
          cursor: pointer;
      
          .ikd-collapseable-button-toggle {
            width: 48px;
            height: 24px;
            display: flex;
            transition: all 0.25s;
          }
      
          &.hide {
            .ikd-collapseable-button-toggle{
              transform: translateX(0);
            }
          }
          .ikd-collapseable-button-toggle{
            transform: translateX(-24px);
          }
        }
      }
      
      .ikd-search-box {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 600px;
        border-left: 1px solid #D9DBE9;
        padding-left: 20px;
        @media (max-width: 1400px) {
          width: 400px;
        }
        @media (max-width: 1200px) {
          max-width: 400px;
          width: 100%;
        }
        @media (max-width: 767px) {
          padding-left: 15px;
        }
        @media (max-width: 600px) {
          display: none;
        }
        .ant-input-group-wrapper {
          .ant-input-wrapper {
            .ant-input-affix-wrapper {
              padding: 0;
              position: relative;
              .ant-input-prefix {
                margin: 0;
                cursor: pointer;
                position: absolute;
                top: 50%;
                left: 20px;
                margin-top: -12px;
                z-index: 99;
              }

              .ant-input {
                background-color: #E6F4F9;
                border-radius: 8px;
                transition: all 0.3s;
                padding-left: 64px;
                height: 48px;
                width: 64px;
                opacity: 0;
              }

              &:hover {
                box-shadow: none;
              }
            }
            .ant-input-group-addon {
              display: none;
            }
          }
        }
        &.expand {
          .ant-input-group-wrapper {
            .ant-input-wrapper {
              .ant-input-affix-wrapper {
                .ant-input {
                  width: 100%;
                  opacity: 1;
                }
              }
            }
          }
        }
      }

      .mobile-search-box {
        display: flex;
        flex-direction: column;
        justify-content: center;
        border-left: 1px solid #D9DBE9;
        padding-left: 15px;
        @media (min-width: 601px) {
          display: none;
        }
        @media only screen and (max-width:575px){
          .ikd-header-content {
            background-color: red;
            margin: 50px;
          }
          display: none;
        }
        .mobile-searchbox-toggler {
          cursor: pointer;
          min-width: 24px;
        }
        .ant-input-group-wrapper {
          position: absolute;
          top: 0;
          left: 0;
          height: 100%;
          width: 0;
          z-index: 111;
          overflow: hidden;
          transition: all 0.3s;
          .ant-input-wrapper {
            .ant-input-affix-wrapper {
              padding: 0;
              position: relative;
              .ant-input-prefix {
                margin: 0;
                cursor: pointer;
                position: absolute;
                top: 50%;
                left: 20px;
                margin-top: -12px;
                z-index: 99;
              }
              .ant-input {
                background-color: #E6F4F9;
                border-radius: 0;
                transition: all 0.3s;
                padding-left: 64px;
                height: 60px;
                width: 100%;
              }
            }
            .ant-input-group-addon {
              display: none;
            }
          }
        }
        &.show {
          .ant-input-group-wrapper {
            width: 199%;
          }
        }
      }
      
      .ikd-header-organisation {
        border-left: 1px solid #D9DBE9;
        padding: 0 20px;
        @media (max-width: 960px) {
          display: none;
        }
        .organisation-title {
          font-size: 12px;
          color: #A0A3BD;
          line-height: 100%;
          margin-bottom: 14px;
          white-space: nowrap;
        }
        .organisation-logo {
          min-width: 120px;
        }
      }
    }

    .ikd-header-right {
      display: flex;
      margin-left: auto;
      padding-right: 30px;
      @media (max-width: 767px) {
        padding-right: 0;
      }
      .loggedin-user {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;

        .ant-dropdown-trigger.loggedin-user-avatar {
          cursor: pointer;
          margin-right: 10px;        
        }
      }
      .ikd-header-notification {
        min-width: 24px;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-right: 30px;
        @media (max-width: 767px) {
          margin-right: 15px;
        }
        .notification-handler {
          cursor: pointer;
        }
      }
      .ikd-header-message-notif {
        min-width: 24px;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-right: 30px;
        @media (max-width: 767px) {
          margin-right: 15px;
        }
        .message-notif-handler {
          cursor: pointer;
        }
      }
    }
  }
}

.ant-drawer  {
  .ant-drawer-content.notifications-drawer {
    border-radius: 8px 0 0 8px;
    .ant-drawer-header {
      padding: 30px 30px 10px 30px;
      border: none;
      .ant-drawer-title {
        color: #4C0027;
        font-size: 18px;
        line-height: 1.333333;
        font-weight: 600;
        font-family: 'Poppins', sans-serif;
      }
    }
    .ant-drawer-body {
      padding: 0 30px 10px 30px;

      .ant-list.ant-list-split {
        .ant-list-items {
          .ant-list-item {
            border-bottom: 1px solid #D9DBE9;
            padding-top: 20px;
            padding-bottom: 10px;

            .ant-list-item-meta {
              .ant-list-item-meta-avatar {
                margin-right: 15px;
              }
              .ant-list-item-meta-title {
                color: #14142B;
                font-size: 14px;
                font-weight: 400;
                line-height: 1.5714285;
                font-family: 'Poppins', sans-serif;
                margin: 0;
              }
              .ant-list-item-meta-description {
                color: #A0A3BD;
                font-size: 12px;
                line-height: 2;
                font-family: 'Poppins', sans-serif;
                margin-top: 10px;
              }
            }
          }
        }
      }
    }
  }
}

.ant-dropdown.user-dropdown {
  z-index: 1290;
  
  .ant-dropdown-arrow {
    background-image: url(../../../assets/images/header/polygon.png);
    background-repeat: no-repeat;
    height: 33px;
    width: 30px;
    top: 13px;
    &::after, &::before {
      display: none;
    }
  }
  .user-dropdown-container {
    border: 1px solid #D9DBE9;
    padding: 20px 30px;
    background-color: #fff;
    box-shadow: 0px 0px 8px 2px #09A1DA1A;

    border-radius: 8px;
    min-width: 336px;
    box-sizing: border-box;

    .user-dropdown-meta {
      display: flex;
      border-bottom: 1px solid #D9DBE9;
      padding-bottom: 20px;

      .ant-avatar {
        margin-right: 20px;
      }
      .user-dropdown-meta-content {
        flex: 1;

        .ant-typography {
          margin: 0;
        }
        .user-meta-role {
          font-size: 16px;
          font-weight: 500;
          line-height: 1.5;
        }
      }
    }

    .ant-dropdown-menu {
      padding: 10px 0 0;
      .ant-dropdown-menu-item {
        padding: 10px 0;
        font-size: 14px;
        &:hover {
          background-color: transparent;
        }

        .ant-dropdown-menu-item-icon {
          margin-right: 20px;
        }
      }
    }

    .user-dropdown-footer {
      margin-top: 10px;
    }
    
  }
}

